methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:19: error: not found: value xx
    xx = arr(2*i);
    ^PictureMono1:20: error: not found: value yy
    yy = arr(2*i+1);
    ^PictureMono1:21: error: not found: value xx
    if (xx*yy != 0 && xx < 7 and yy <7)
        ^PictureMono1:21: error: not found: value yy
    if (xx*yy != 0 && xx < 7 and yy <7)
           ^PictureMono1:21: error: not found: value xx
    if (xx*yy != 0 && xx < 7 and yy <7)
                      ^PictureMono1:21: error: not found: value yy
    if (xx*yy != 0 && xx < 7 and yy <7)
                                 ^PictureMono1:22: error: not found: value xx
      pushpt(xx,yy);
             ^PictureMono1:22: error: not found: value yy
      pushpt(xx,yy);
                ^